# Resume-building-using-ATS-Score-Calculation-using-MCP-and-LLM

./: README.md  agent.py  job_skill_extraction.py  pyproject.toml  resume_skill_extract.py  server.py
spacy_model/: config.cfg  meta.json
spacy_model/entity_ruler/: patterns.jsonl
static/: style.css
templates/: base.html  find_match.html  home.html  jobs.html  resumes.html
